--- a/packages/a2aclient/package.json
+++ b/packages/a2aclient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a2aserver",
+  "name": "a2aclient",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,10 +11,6 @@
   "license": "ISC",
   "description": "Use this app as a template for your new package",
   "dependencies": {
-    "@types/express": "^5.0.1",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
     "a2aschema": "*"
   },
   "devDependencies": {
