--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,13 @@ node_modules
 .pnp.js
 
 # Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+**/*/.env
+**/*/.env.local.user
+**/*/.env.development.local.user
+**/*/.env.test.local.user
+**/*/.env.production.local.user
+
+data/
 
 # Testing
 coverage
