--- a/apps/supportagent/env/.env.local
+++ b/apps/supportagent/env/.env.local
@@ -1,5 +1,5 @@
-BOT_ENDPOINT=https://nx7vxz3w-6000.usw2.devtunnels.ms
-BOT_DOMAIN=nx7vxz3w-6000.usw2.devtunnels.ms
+BOT_ENDPOINT=https://7x0drspd-8000.usw2.devtunnels.ms
+BOT_DOMAIN=7x0drspd-8000.usw2.devtunnels.ms
 
 APP_NAME_SUFFIX=local
 TEAMS_APP_ID=b608aad3-b163-49f8-a32e-1a623bcc8e21
