--- a/apps/supportagent/package.json
+++ b/apps/supportagent/package.json
@@ -19,22 +19,24 @@
     "dev:teamsfx:launch-testtool": "npx env-cmd --silent -f env/.env.testtool teamsapptester start"
   },
   "dependencies": {
+    "@microsoft/spark.ai": "latest",
     "@microsoft/spark.api": "latest",
     "@microsoft/spark.apps": "latest",
     "@microsoft/spark.cards": "latest",
     "@microsoft/spark.common": "latest",
     "@microsoft/spark.dev": "latest",
-    "@microsoft/spark.graph": "latest",
+    "@microsoft/spark.openai": "latest",
+    "a2aserver": "*",
     "octokit": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "dotenv": "^16.4.5",
+    "env-cmd": "latest",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsup": "^8.4.0",
-    "typescript": "^5.4.5",
-    "env-cmd": "latest"
+    "typescript": "^5.4.5"
   }
 }
