--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -21,15 +21,16 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.3.0",
-    "@microsoft/spark.ai": "^0.2.4",
-    "@microsoft/spark.api": "latest",
-    "@microsoft/spark.apps": "latest",
-    "@microsoft/spark.cards": "latest",
-    "@microsoft/spark.common": "latest",
-    "@microsoft/spark.dev": "latest",
-    "@microsoft/spark.graph": "latest",
-    "@microsoft/spark.openai": "^0.2.4",
-    "a2aserver": "*"
+    "@microsoft/teams.ai": "^0.2.4",
+    "@microsoft/teams.api": "latest",
+    "@microsoft/teams.apps": "latest",
+    "@microsoft/teams.cards": "latest",
+    "@microsoft/teams.common": "latest",
+    "@microsoft/teams.dev": "latest",
+    "@microsoft/teams.graph": "latest",
+    "@microsoft/teams.openai": "^0.2.4",
+    "a2aserver": "file:packages/a2aserver",
+    "a2aschema": "file:packages/a2aschema"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
