--- a/apps/teamagent/package.json
+++ b/apps/teamagent/package.json
@@ -16,14 +16,14 @@
     "dev": "npx nodemon -w \"./src/**\" -e ts --exec \"node -r ts-node/register -r dotenv/config ./src/index.ts\""
   },
   "dependencies": {
-    "@microsoft/spark.ai": "^0.2.6",
-    "@microsoft/spark.api": "latest",
-    "@microsoft/spark.apps": "latest",
-    "@microsoft/spark.cards": "latest",
-    "@microsoft/spark.common": "latest",
-    "@microsoft/spark.dev": "latest",
-    "@microsoft/spark.graph": "latest",
-    "@microsoft/spark.openai": "^0.2.6",
+    "@microsoft/teams.ai": "^0.2.6",
+    "@microsoft/teams.api": "latest",
+    "@microsoft/teams.apps": "latest",
+    "@microsoft/teams.cards": "latest",
+    "@microsoft/teams.common": "latest",
+    "@microsoft/teams.dev": "latest",
+    "@microsoft/teams.graph": "latest",
+    "@microsoft/teams.openai": "^0.2.6",
     "@types/uuid": "^10.0.0",
     "uuid": "^11.1.0"
   },
