--- a/apps/teamagent/appPackage/manifest.json
+++ b/apps/teamagent/appPackage/manifest.json
@@ -5,8 +5,8 @@
   "id": "${{TEAMS_APP_ID}}",
   "packageName": "com.package.teamagent",
   "name": {
-    "short": "teamagent-${{APP_NAME_SUFFIX}}",
-    "full": "Teamagent"
+    "short": "release-coordinator-agent",
+    "full": "Release Coordinator Agent"
   },
   "developer": {
     "name": "Microsoft",
@@ -44,10 +44,7 @@
       "supportsFiles": false
     }
   ],
-  "validDomains": [
-    "${{BOT_DOMAIN}}",
-    "*.botframework.com"
-  ],
+  "validDomains": ["${{BOT_DOMAIN}}", "*.botframework.com"],
   "webApplicationInfo": {
     "id": "${{BOT_ID}}",
     "resource": "api://botid-${{BOT_ID}}"
