--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -21,14 +21,14 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.3.0",
-    "@microsoft/teams.ai": "^0.2.4",
-    "@microsoft/teams.api": "latest",
-    "@microsoft/teams.apps": "latest",
-    "@microsoft/teams.cards": "latest",
-    "@microsoft/teams.common": "latest",
-    "@microsoft/teams.dev": "latest",
-    "@microsoft/teams.graph": "latest",
-    "@microsoft/teams.openai": "^0.2.4",
+    "@microsoft/teams.ai": "0.2.12",
+    "@microsoft/teams.api": "0.2.12",
+    "@microsoft/teams.apps": "0.2.12",
+    "@microsoft/teams.cards": "0.2.12",
+    "@microsoft/teams.common": "0.2.12",
+    "@microsoft/teams.dev": "0.2.12",
+    "@microsoft/teams.graph": "0.2.12",
+    "@microsoft/teams.openai": "0.2.12",
     "a2aserver": "file:packages/a2aserver",
     "a2aschema": "file:packages/a2aschema"
   },
