--- a/apps/supportagent/tsconfig.json
+++ b/apps/supportagent/tsconfig.json
@@ -11,10 +11,10 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": false,
+    "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "pretty": true,
     "outDir": "dist",
     "rootDir": "src",
