--- a/apps/supportagent/package.json
+++ b/apps/supportagent/package.json
@@ -19,14 +19,14 @@
     "dev:teamsfx:launch-testtool": "npx env-cmd --silent -f env/.env.testtool teamsapptester start"
   },
   "dependencies": {
-    "@microsoft/teams.ai": "0.2.12",
-    "@microsoft/teams.api": "0.2.12",
-    "@microsoft/teams.apps": "0.2.12",
-    "@microsoft/teams.cards": "0.2.12",
-    "@microsoft/teams.common": "0.2.12",
-    "@microsoft/teams.dev": "0.2.12",
-    "@microsoft/teams.openai": "0.2.12",
-    "a2aserver": "*",
+    "@microsoft/teams.ai": "^2.0.0-preview.3",
+    "@microsoft/teams.a2a": "^2.0.0-preview.3",
+    "@microsoft/teams.api": "^2.0.0-preview.3",
+    "@microsoft/teams.apps": "^2.0.0-preview.3",
+    "@microsoft/teams.cards": "^2.0.0-preview.3",
+    "@microsoft/teams.common": "^2.0.0-preview.3",
+    "@microsoft/teams.dev": "^2.0.0-preview.3",
+    "@microsoft/teams.openai": "^2.0.0-preview.3",
     "octokit": "^4.1.3"
   },
   "devDependencies": {
