--- a/apps/teamagent/package.json
+++ b/apps/teamagent/package.json
@@ -16,14 +16,15 @@
     "dev": "npx nodemon -w \"./src/**\" -e ts --exec \"node -r ts-node/register -r dotenv/config ./src/index.ts\""
   },
   "dependencies": {
-    "@microsoft/teams.ai": "^0.2.6",
-    "@microsoft/teams.api": "0.2.12",
-    "@microsoft/teams.apps": "0.2.12",
-    "@microsoft/teams.cards": "0.2.12",
-    "@microsoft/teams.common": "0.2.12",
-    "@microsoft/teams.dev": "0.2.12",
-    "@microsoft/teams.graph": "0.2.12",
-    "@microsoft/teams.openai": "^0.2.6",
+    "@microsoft/teams.ai": "^2.0.0-preview.3",
+    "@microsoft/teams.a2a": "^2.0.0-preview.3",
+    "@microsoft/teams.api": "^2.0.0-preview.3",
+    "@microsoft/teams.apps": "^2.0.0-preview.3",
+    "@microsoft/teams.cards": "^2.0.0-preview.3",
+    "@microsoft/teams.common": "^2.0.0-preview.3",
+    "@microsoft/teams.dev": "^2.0.0-preview.3",
+    "@microsoft/teams.graph": "^2.0.0-preview.3",
+    "@microsoft/teams.openai": "^2.0.0-preview.3",
     "@types/uuid": "^10.0.0",
     "uuid": "^11.1.0"
   },
