--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@azure/cosmos": "^4.3.0",
     "@microsoft/teams.ai": "^2.0.0-preview.3",
+    "@microsoft/teams.a2a": "^2.0.0-preview.3",
     "@microsoft/teams.api": "^2.0.0-preview.3",
     "@microsoft/teams.apps": "^2.0.0-preview.3",
     "@microsoft/teams.cards": "^2.0.0-preview.3",
