--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -21,16 +21,15 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.3.0",
-    "@microsoft/teams.ai": "0.2.12",
-    "@microsoft/teams.api": "0.2.12",
-    "@microsoft/teams.apps": "0.2.12",
-    "@microsoft/teams.cards": "0.2.12",
-    "@microsoft/teams.common": "0.2.12",
-    "@microsoft/teams.dev": "0.2.12",
-    "@microsoft/teams.graph": "0.2.12",
-    "@microsoft/teams.openai": "0.2.12",
-    "a2aserver": "file:packages/a2aserver",
-    "a2aschema": "file:packages/a2aschema"
+    "@microsoft/teams.ai": "^2.0.0-preview.3",
+    "@microsoft/teams.a2a": "^2.0.0-preview.3",
+    "@microsoft/teams.api": "^2.0.0-preview.3",
+    "@microsoft/teams.apps": "^2.0.0-preview.3",
+    "@microsoft/teams.cards": "^2.0.0-preview.3",
+    "@microsoft/teams.common": "^2.0.0-preview.3",
+    "@microsoft/teams.dev": "^2.0.0-preview.3",
+    "@microsoft/teams.graph": "^2.0.0-preview.3",
+    "@microsoft/teams.openai": "^2.0.0-preview.3"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
