--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -21,17 +21,19 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.3.0",
-    "@microsoft/teams.ai": "^2.0.0-preview.3",
     "@microsoft/teams.a2a": "^2.0.0-preview.3",
+    "@microsoft/teams.ai": "^2.0.0-preview.3",
     "@microsoft/teams.api": "^2.0.0-preview.3",
     "@microsoft/teams.apps": "^2.0.0-preview.3",
     "@microsoft/teams.cards": "^2.0.0-preview.3",
     "@microsoft/teams.common": "^2.0.0-preview.3",
     "@microsoft/teams.dev": "^2.0.0-preview.3",
     "@microsoft/teams.graph": "^2.0.0-preview.3",
-    "@microsoft/teams.openai": "^2.0.0-preview.3"
+    "@microsoft/teams.openai": "^2.0.0-preview.3",
+    "camelcase": "^8.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.2",
     "@types/node": "^22.5.4",
     "dotenv": "^16.4.5",
     "env-cmd": "latest",
