--- a/apps/github-agent/package.json
+++ b/apps/github-agent/package.json
@@ -25,8 +25,8 @@
     "@microsoft/teams.common": "preview",
     "@microsoft/teams.dev": "preview",
     "@microsoft/teams.graph": "preview",
-    "@microsoft/teams.mcpclient": "^2.0.0-preview.8",
-    "@microsoft/teams.openai": "^2.0.0-preview.8",
+    "@microsoft/teams.mcpclient": "^2.0.2",
+    "@microsoft/teams.openai": "^2.0.2",
     "@modelcontextprotocol/sdk": "^1.17.1"
   },
   "devDependencies": {
