--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-  "main": "dist/index",
+  "main": "src/index.js",
   "types": "dist/index",
   "files": [
     "dist",
@@ -11,8 +11,8 @@
   ],
   "scripts": {
     "clean": "npx rimraf ./dist",
-    "build": "npx tsup",
-    "postbuild": "cp package.json dist/package.json && cp package-lock.json dist/package-lock.json",
+    "build": "tsc",
+    "postbuild": "cp package.json dist/ && cp package-lock.json dist/",
     "start": "node .",
     "dev": "npx nodemon -w \"./src/**\" -e ts --exec \"node -r ts-node/register -r dotenv/config ./src/index.ts\"",
     "dev:teamsfx": "npx env-cmd --silent -f .env npm run dev",
@@ -20,16 +20,16 @@
     "dev:teamsfx:launch-testtool": "npx env-cmd --silent -f env/.env.testtool teamsapptester start"
   },
   "dependencies": {
-    "@azure/cosmos": "^4.3.0",
-    "@microsoft/teams.a2a": "^2.0.0-preview.8",
-    "@microsoft/teams.ai": "^2.0.0-preview.8",
-    "@microsoft/teams.api": "^2.0.0-preview.8",
-    "@microsoft/teams.apps": "^2.0.0-preview.8",
-    "@microsoft/teams.cards": "^2.0.0-preview.8",
-    "@microsoft/teams.common": "^2.0.0-preview.8",
-    "@microsoft/teams.dev": "^2.0.0-preview.8",
-    "@microsoft/teams.graph": "^2.0.0-preview.8",
-    "@microsoft/teams.openai": "^2.0.0-preview.8",
+    "@azure/cosmos": "^4.6.0",
+    "@azure/identity": "^4.13.0",
+    "@microsoft/teams.ai": "^2.0.2",
+    "@microsoft/teams.api": "^2.0.2",
+    "@microsoft/teams.apps": "^2.0.2",
+    "@microsoft/teams.cards": "^2.0.2",
+    "@microsoft/teams.common": "^2.0.2",
+    "@microsoft/teams.dev": "^2.0.2",
+    "@microsoft/teams.graph": "^2.0.2",
+    "@microsoft/teams.openai": "^2.0.2",
     "camelcase": "^8.0.0"
   },
   "devDependencies": {
