--- a/apps/standupagent/package.json
+++ b/apps/standupagent/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "npx rimraf ./dist",
     "build": "tsc",
-    "postbuild": "cp package.json dist/ && cp package-lock.json dist/",
+    "postbuild": "cp package.json dist/",
     "start": "node .",
     "dev": "npx nodemon -w \"./src/**\" -e ts --exec \"node -r ts-node/register -r dotenv/config ./src/index.ts\"",
     "dev:teamsfx": "npx env-cmd --silent -f .env npm run dev",
@@ -20,7 +20,6 @@
     "dev:teamsfx:launch-testtool": "npx env-cmd --silent -f env/.env.testtool teamsapptester start"
   },
   "dependencies": {
-    "@azure/cosmos": "^4.6.0",
     "@azure/identity": "^4.13.0",
     "@microsoft/teams.ai": "^2.0.2",
     "@microsoft/teams.api": "^2.0.2",
@@ -30,7 +29,8 @@
     "@microsoft/teams.dev": "^2.0.2",
     "@microsoft/teams.graph": "^2.0.2",
     "@microsoft/teams.openai": "^2.0.2",
-    "camelcase": "^8.0.0"
+    "camelcase": "^8.0.0",
+    "mongodb": "^4.17.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
